# fast-hex-lite

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: apple-m3pro.md  bench.rs
src/: decode.rs  encode.rs  lib.rs  simd.rs
src/decode/: tests.rs
src/simd/: tests.rs
