[package]
name = "fast-hex-lite"
version = "0.1.1"
edition = "2021"
rust-version = "1.88"
authors = ["CppNexus cppnexus@proton.me"]
description = "High-performance hex encoding and decoding with zero allocations, no_std support and SIMD acceleration"
repository = "https://github.com/cppNexus/fast-hex-lite"
homepage = "https://github.com/cppNexus/fast-hex-lite"
documentation = "https://docs.rs/fast-hex-lite"
readme = "README.md"
license = "Apache-2.0"
keywords = ["hex", "encoding", "decoding", "no_std", "simd"]
categories = ["encoding", "no-std", "algorithms"]
include = [
    "src/**",
    "benches/**",
    "README.md",
    "LICENSE*",
    "Cargo.toml",
]

[features]
default = []
std = []
simd = ["std"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
hex = "0.4"

[[bench]]
name = "bench"
harness = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1